# zed-rockr

./: Cargo.toml  GENERATE.md  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-rockr.wasm
bindings/c/: tree-sitter-rockr.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_rockr/: __init__.py  binding.c
bindings/rust/: Cargo.toml  build.rs  lib.rs
bindings/rust/src/: lib.rs
bindings/swift/TreeSitterRockr/: rockr.h
queries/: highlights.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basics.txt
